--- a/.gitignore
+++ b/.gitignore
@@ -82,9 +82,13 @@ _testmain.go
 # Python
 # Editors
 .vscode/
+.idea/
 
 # Vagrant
 .vagrant/
+
+# Mac/OSX
+.DS_Store
 
 # Windows
 Thumbs.db
@@ -94,6 +98,9 @@ Thumbs.db
 __pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
+*.so
 
 # Distribution / packaging
 .Python
@@ -199,14 +206,9 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
-# Terraform external modules
+# ignore test related file(s)
+**/test**
+**.
+
+# ignore terraform external modules
 **/.external_modules
-
-# Test files and directories
-**/[Tt]est/*
-**/[Tt]ests/*
-**/*[Tt]est*/*
-**/*[Tt]ests*/*
-
-# remote_backend.tf file
-**/remote_backend.tf
